@@ -1,22 +1,31 @@
-  # cat=localisation/others/10;         type=options[No. I use one language only.,Yes. I use more than one language.]; label=Localisation Support: Do you want to extend the backend with fields for translation?
+  # cat=localisation/10;         type=options[No. I use one language only.,Yes. I use more than one language.]; label=Localisation Support: Do you want to extend the backend with fields for translation?
 LLsupport = No. I use one language only.
-  # cat=localisation/others/998;  type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptExternalLinks]; label=External Links
+  # cat=localisation/998;  type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptExternalLinks]; label=External Links
 LLsupportExternalLinks=0
-  # cat=localisation/others/999;  type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptSponsors]; label=Subsidise the Caddy project!
+  # cat=localisation/999;  type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptSponsors]; label=Subsidise the Caddy project!
 LLsupportExternalSponsors=0
 
-  # cat=tca/others/10;                  type=boolean; label= Manual ordering of products: Enable this option and you can order product records manually. Otherwise these records will be sorted by title.
+  # cat=linkhandler/300;          type=options[Yes (recommended),No]; label=+Items: Add the tab [Items (Quick Shop)] to the linkhandler.
+linkhandler.tx_quickshop_products = Yes (recommended)
+  # cat=linkhandler/301;          type=string; label=Items pids: CSV list of page id with the items folders. The pids are recommended for usability only. I.e: 1335, 1245
+linkhandler.tx_quickshop_products.onlyPids = 
+  # cat=linkhandler/998;           type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptExternalLinks]; label=External Links
+linkhandlerExternalLinks=0
+  # cat=linkhandler/999;           type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptSponsors]; label=Subsidise the Caddy project!
+linkhandlerExternalSponsors=0
+
+  # cat=tca/10;                  type=boolean; label= Manual ordering of products: Enable this option and you can order product records manually. Otherwise these records will be sorted by title.
 tcaProductOrdering = 0
-  # cat=tca/others/20;                  type=boolean; label= Allow records on standard pages: Enabling this option you can insert product and category records on standard pages. Otherwise these records can only be located on sys folders.
+  # cat=tca/20;                  type=boolean; label= Allow records on standard pages: Enabling this option you can insert product and category records on standard pages. Otherwise these records can only be located on sys folders.
 tcaRecordsOnStandardPages = 0
-  # cat=tca/others/998;           type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptExternalLinks]; label=External Links
+  # cat=tca/998;           type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptExternalLinks]; label=External Links
 tcaExternalLinks=0
-  # cat=tca/others/999;           type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptSponsors]; label=Subsidise the Caddy project!
+  # cat=tca/999;           type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptSponsors]; label=Subsidise the Caddy project!
 tcaExternalSponsors=0
 
-  # cat=evaluate/enable/10;             type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptEvaluatorTYPO3version]; label=Evaluation
+  # cat=evaluate/10;             type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptEvaluatorTYPO3version]; label=Evaluation
 update=0
-  # cat=evaluate/enable/998;      type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptExternalLinks]; label=External Links
+  # cat=evaluate/998;      type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptExternalLinks]; label=External Links
 updateExternalLinks=0
-  # cat=evaluate/enable/999;      type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptSponsors]; label=Subsidise the Caddy project!
+  # cat=evaluate/999;      type=user[EXT:quick_shop/lib/userfunc/class.tx_quickshop_userfunc.php:tx_quickshop_userfunc->promptSponsors]; label=Subsidise the Caddy project!
 updateExternalSponsors=0
