@@ -8,6 +8,7 @@
   // temp.form
   // temp.tax
   // plugin.tx_browser_pi1
+  // plugin.tx_linkhandler
 
 
 
@@ -785,3 +786,22 @@ plugin.tx_browser_pi1 {
   }
 }
   // plugin.tx_browser_pi1
+
+
+
+  ////////////////////////////////////////
+  //
+  // plugin.tx_linkhandler
+
+  // #53649, 131114, dwildt, +
+plugin.tx_linkhandler {
+  tx_quickshop_products {
+    forceLink        = 0
+    useCacheHash     = 1
+    parameter        = {$plugin.quick_shop.pages.shop}
+    additionalParams = &tx_browser_pi1[showUid]={field:uid}
+    additionalParams {
+      insertData = 1
+    } 
+  }
+}
